# cheongeum-tc

./: .gitignore  .gitmeessage.txt  CMakeLists.txt  README.md  cheongeum.code-workspace  openocd_log.txt  sdkconfig.default  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  core_feature.yml  feature.yml  sub_task.yml
lib/liboperation/: CMakeLists.txt
lib/liboperation/include/ce/operation/: mode.h  test.h
lib/liboperation/src/: mode.c
lib/librelay/: CMakeLists.txt
lib/librelay/include/ce/relay/: control.h
lib/librelay/src/: control.c
lib/libsensor/: CMakeLists.txt
lib/libsensor/include/ce/sensor/: kx022acr.h  sensors.h  sht4x.h  temperatures.h
lib/libsensor/src/: kx022acr.c  sensors.c  sht4x.c  temperatures.c
lib/libserver/: CMakeLists.txt
lib/libserver/include/ce/server/: mqtt_server.h  server_upload.h  wifi.h
lib/libserver/src/: mqtt_server.c  server_upload.c  wifi.c
lib/libtc/: CMakeLists.txt
lib/libtc/include/ce/tc/: display.h  esp32.h  st7789_147inch.h  tc_state.h
lib/libtc/src/: component_lib.c  st7789.c  st7789_147inch.c
lib/libutil/: CMakeLists.txt
lib/libutil/include/ce/util/: error.h  shared.h  sys.h  time.h  user_command.h
lib/libutil/src/: shared.c  user_command.c
main/: CMakeLists.txt  main.c
server_flask/: app.py
server_flask/uploads/: 20250331_005242.txt  20250331_005737.txt  20250331_005738.txt  20250331_010703.txt  20250331_010704.txt  20250331_010718.txt  20250331_010907.txt  20250331_011155.txt  20250331_011156.txt
